Fix spacing index.html.

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header {
     background: rgba(4, 85, 98, 0.85);
-    padding: 2.5%;
+    padding: 5px;
     border-radius: 0 0 4px 4px;
     box-shadow: 0 3px 3px #022b31;
 }
@@ -37,13 +37,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header-title-container {
-    margin: auto;
+    margin: auto 5px;
+    padding: 0;
 }
 
 .header-title {
     color: #e8ded2;
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 3em;
+    font-size: 32px;
     font-weight: 100;
     margin: auto;
     padding-top: 10px;
@@ -51,7 +52,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #navi {
     background: rgba(5, 107, 122, 0.85);
-    padding: 10px;
+    padding: 5px;
     border-radius: 0 0 4px 4px;
     box-shadow: 0 3px 3px #045562;
 }
@@ -68,6 +69,7 @@ li.nav-item:hover {
 } 
 
 a.nav-link {
+    padding: 5px;
     color: #a3d2ca;
 }
 
@@ -83,7 +85,7 @@ a.nav-link {
 
 .adam {
     font-family: 'Amatic SC', cursive;
-    font-size: 4em;
+    font-size: 3.5em;
     text-shadow: 3px 3px #045562;
 }
 
